--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@mantine/hooks": "^7.14.3",
     "@mantine/modals": "^7.14.3",
     "@tabler/icons-react": "^3.23.0",
-    "dayjs": "^1.11.13",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
-    "react-papaparse": "^4.4.0",
     "react-router": "^7.0.1",
+    "react-spinners": "^0.14.1",
     "recharts": "^2.13.3"
   },
   "devDependencies": {
@@ -34,8 +34,10 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "postcss-preset-mantine": "^1.17.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
