--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-query": "^3.39.3",
     "react-router": "^7.0.1",
     "react-spinners": "^0.14.1",
-    "recharts": "^2.13.3"
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
